# http-codes

./: .gitignore  README.md  build.sh  http-codes.code-workspace  io.github.andrepg.httpcodes.json  meson.build
.flatpak-builder/checksums/: x86_64-io.github.andrepg.httpcodes.json
.github/: FUNDING.yml
.github/workflows/: deploy-website.yml
data/: icons.gresource.xml  io.github.andrepg.httpcodes.desktop.in  io.github.andrepg.httpcodes.gschema.xml  io.github.andrepg.httpcodes.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: http-codes.data.gresource.xml  io.github.andrepg.httpcodes.data.gresource.xml  io.github.andrepg.httpcodes.src.gresource.xml  main.js  meson.build  window.js  window.ui
src/components/: HttpCodeDetails.js  HttpCodeListItem.js  HttpCodeListItem.ui  httpCodeListItem.js  singleNavigationPage.js
src/gtk/: single-navigation-page.ui
src/http-status-codes/: 20x.js  30x.js  40x.js  50x.js  index.js
src/pages/: httpCodesGroupPage.js  httpCodesIndexPage.js
website/: .prettierrc.json  README.md  index.html  package-lock.json  package.json  tailwind.config.js
website/.github/: deploy-website.yml
website/src/: App.vue  links.js  main.js
website/src/assets/: main.css
website/src/components/: DownloadButton.vue  IconLink.vue  NavLink.vue  SectionContainer.vue  SectionParagraph.vue  SectionTitle.vue
website/src/partials/: NavigationMenu.vue  ScreenshotCarousel.vue  TechnologiesGrid.vue
website/src/views/: FooterView.vue  HomeView.vue
(+1 files in other folders)
